# 5-levels-of-building-chatbot-apps

./: .env.example  README.md  components.py  docker-compose.yaml  main.py  pyproject.toml
data/: hosts.csv  listings.csv
docker/: init.sql
